--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="20250116_123622.jpg" alt="Ziad Ahmed" class="profile-photo">
+   <img src="20250116_123622.jpg" alt="Ziad Ahmed" style="width:120px; border-radius:50%; margin-bottom:15px;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziad Ahmed's CV</title>
