--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-        <img src="20250116_123622.jpg" alt="Ziad Ahmed" style="width:100px; height:100px; object-fit:cover; border-radius:50%; display:block; margin:0 auto 15px auto;">
+<head><header style="background:#3a4a5d; color:#fff; padding:40px 0; text-align:center;">
+  <img src="20250116_123622.jpg" alt="Ziad Ahmed"
+       style="width:200px; height:200px; object-fit:cover; border-radius:50%; border:6px solid #fff; margin-bottom:25px; box-shadow:0 2px 10px rgba(0,0,0,0.12);">
+  <h1 style="font-size:2.5em; font-weight:bold; margin-bottom:10px;">Ziad Ahmed</h1>
+  <p style="font-size:1.25em; margin-bottom:24px; opacity:0.85;">Aviation Professional</p>
+  <div style="display:flex; justify-content:center; gap:35px; font-size:1.1em; opacity:0.85;">
+    <span>📞 (your phone number)</span>
+    <span>✉️ (your email address)</span>
+    <span>📍 (your location)</span>
+  </div>
+</header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziad Ahmed's CV</title>
