--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <h1 style="font-size:2.5em; font-weight:bold; margin-bottom:10px;">Ziad Ahmed</h1>
   <p style="font-size:1.25em; margin-bottom:24px; opacity:0.85;">Aviation Professional</p>
   <div style="display:flex; justify-content:center; gap:35px; font-size:1.1em; opacity:0.85;">
-    <span>📞 (your phone number)</span>
-    <span>✉️ (your email address)</span>
-    <span>📍 (your location)</span>
+    <span>📞 (01107167064)</span>
+    <span>✉️ (ziaddahmedd7@gmail.com )</span>
+    <span>📍 (Alexandri,egypt)</span>
   </div>
 </header>
     <meta charset="UTF-8">
